--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -1,8 +1,9 @@
 <!-- The list of messages will appear here: -->
-<ul id='msg-list' phx-update="append" class="pa-1">
-</ul>
+<div class="mt-[4rem]">
+  <ul id="msg-list"  phx-update="stream" class="pa-1"></ul>
+</div>
 
-<footer class="bg-slate-800 p-2 h-[3rem] fixed bottom-0 w-full flex justify-center">
+<footer class="bg-slate-800 p-2 h-[3rem] bottom-0 w-full flex justify-center sticky mt-[auto]">
   <div class="w-full flex flex-row items-center text-gray-700 focus:outline-none font-normal">
     <input type="text" id="name" placeholder="Name" required
         class="grow-0 w-1/6 px-1.5 py-1.5"/>
